--- a/index.html
+++ b/index.html
@@ -1,1 +1,138 @@
-hello
+<html>
+<head>
+  <title>tbcuk</title>
+</head>
+<body>
+<center>
+    <marquee><font size="+5"><h1>HERD SHEEP RAID REPEAT</h1></font></marquee>
+    <img src="https://motherboard-images.vice.com/content-images/contentimage/26327/1444070256569233.gif">
+
+<h2>welcome to the HERD SHEEP RAID REPEAT tournament league</h2>
+<p>here are the standings<p>
+<table border="10">
+<tbody>
+  <tr>
+    <td></td>
+    <td>liam</td>
+    <td>cam</td>
+    <td>raid</td>
+    <td>neel</td>
+    <td>jon<br></td>
+    <td>peter</td>
+    <td>harry<br></td>
+    <td>sam</td>
+    <td>matt</td>
+  </tr>
+  <tr>
+    <td>liam</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>cam</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>raid</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>neel</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>jon</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>peter</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>harry</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>sam</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>matt</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+</tbody>
+</table>
+</center>
+</body>
+</html>
