--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 </head>
 <body>
 <center>
-    <marquee><font size="+5"><h1>HERD SHEEP RAID REPEAT</h1></font></marquee>
+    <marquee><font size="+2"><h1>HERD SHEEP RAID REPEAT</h1></font></marquee>
+    <img src="https://media.giphy.com/media/TdRWuQlaiDARWYCatW/giphy.gif">
+    <br>
     <img src="https://motherboard-images.vice.com/content-images/contentimage/26327/1444070256569233.gif">
-
 <h2>welcome to the HERD SHEEP RAID REPEAT tournament league</h2>
-<p>here are the standings<p>
 <table border="10">
 <tbody>
   <tr>
@@ -133,6 +133,7 @@
   </tr>
 </tbody>
 </table>
+    <img src="https://i.imgur.com/gdJYECr.gif">
 </center>
 </body>
 </html>
