--- a/index.html
+++ b/index.html
@@ -2,138 +2,12 @@
 <head>
   <title>tbcuk</title>
 </head>
-<body>
-<center>
-    <marquee><font size="+2"><h1>HERD SHEEP RAID REPEAT</h1></font></marquee>
-    <img src="https://media.giphy.com/media/TdRWuQlaiDARWYCatW/giphy.gif">
-    <br>
-    <img src="https://motherboard-images.vice.com/content-images/contentimage/26327/1444070256569233.gif">
-<h2>welcome to the HERD SHEEP RAID REPEAT tournament league</h2>
-<table border="10">
-<tbody>
-  <tr>
-    <td></td>
-    <td>liam</td>
-    <td>cam</td>
-    <td>raid</td>
-    <td>neel</td>
-    <td>jon<br></td>
-    <td>peter</td>
-    <td>harry<br></td>
-    <td>sam</td>
-    <td>matt</td>
-  </tr>
-  <tr>
-    <td>liam</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>cam</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>raid</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>neel</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>jon</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>peter</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>harry</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>sam</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>matt</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-</tbody>
-</table>
-    <img src="https://i.imgur.com/gdJYECr.gif">
-</center>
-</body>
+<body><center>
+  <marquee><font size="+2"><h1>HERD SHEEP RAID REPEAT</h1></font></marquee>
+  <img src="https://media.giphy.com/media/TdRWuQlaiDARWYCatW/giphy.gif">
+  <br>
+  <img src="https://motherboard-images.vice.com/content-images/contentimage/26327/1444070256569233.gif">
+  <h1><font size="+5"><a href="https://rankade.com/tbcuk-aoe2/">CLICK FOR LEADERBOARD</a></h2></font>
+  <img src="https://i.imgur.com/gdJYECr.gif">
+</center></body>
 </html>
