--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <html>
 <head>
   <title>tbcuk</title>
+  <style>
+    html {
+      height: 100%;
+    }
+    body {
+      height: 100%;
+      margin: 0;
+      background: linear-gradient(to bottom, #0057b7 0%, #0057b7 50%, #ffd700 50%, #ffd700 100%);
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+  </style>
 </head>
 <body><center>
   <marquee><font size="+2"><h1>HERD SHEEP RAID REPEAT</h1></font></marquee>
