--- a/index.html
+++ b/index.html
@@ -12,14 +12,33 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
     }
+    #overlay {
+  position: fixed; /* Sit on top of the page content */
+  display: block; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
   </style>
 </head>
 <body><center>
-  <marquee><font size="+2"><h1>HERD SHEEP RAID REPEAT</h1></font></marquee>
+  
+    <div id="overlay">
+  <marquee direction="down" width="100%" height="100%" behavior="alternate">
+  <marquee behavior="alternate">
+    <marquee><font size="+2"><h1>HERD SHEEP<br>RAID REPEAT</h1></font></marquee>
+    </marquee></marquee></div>
+  
+  <marquee><font size="+2"><h1>tbcuk - proud sponsor of tbcuk racing</h1></font></marquee>
   <img src="https://media.giphy.com/media/TdRWuQlaiDARWYCatW/giphy.gif">
   <br>
   <img src="https://motherboard-images.vice.com/content-images/contentimage/26327/1444070256569233.gif">
-  <h1><font size="+5"><a href="https://rankade.com/tbcuk-aoe2/">CLICK FOR LEADERBOARD</a></h2></font>
-  <img src="https://i.imgur.com/gdJYECr.gif">
+  <h1><font size="+5"><a href="https://rankade.com/tbcuk-aoe2/">AOE2 LEADERBOARD</a></h2></font>
+  <img src="https://i.imgur.com/gdJYECr.gif"> 
 </center></body>
 </html>
