--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <marquee><font size="+2"><h1>HERD SHEEP<br>RAID REPEAT</h1></font></marquee>
     </marquee></marquee></div>
   
-  <marquee><font size="+2"><h1>tbcuk - proud sponsor of tbcuk racing</h1></font></marquee>
+  <marquee><font size="+2"><h1>tbcuk - proud sponsor of TBC Racing</h1></font></marquee>
   <img src="https://media.giphy.com/media/TdRWuQlaiDARWYCatW/giphy.gif">
   <br>
   <img src="https://motherboard-images.vice.com/content-images/contentimage/26327/1444070256569233.gif">
